force-app/main/default/objects/Google_Sync_Schedule__mdt/Google_Sync_Schedule__mdt.object-meta.xml
<CustomObject>
    <description>Configures the automatic Team Calendar Google sync scheduler.</description>
    <label>Google Sync Schedule</label>
    <pluralLabel>Google Sync Schedules</pluralLabel>
</CustomObject>