force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Calendars_Per_Queue__c.field-meta.xml
<CustomField>
    <fullName>Calendars_Per_Queue__c</fullName>
    <description>Maximum number of Team Calendars processed per scheduled queueable chunk.</description>
    <inlineHelpText>Use a smaller number if scheduled Google imports risk hitting callout limits.</inlineHelpText>
    <label>Calendars Per Queue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>