force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <description>CRON expression used when scheduling the Team Calendar Google sync job.</description>
    <inlineHelpText>Use Salesforce CRON syntax, for example 0 0 * * * ? to run hourly.</inlineHelpText>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>