force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Future_Days__c.field-meta.xml
<CustomField>
    <fullName>Future_Days__c</fullName>
    <description>How many days ahead the scheduled sync should include.</description>
    <inlineHelpText>Events beyond this window are ignored during scheduled sync runs.</inlineHelpText>
    <label>Future Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>