force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether the scheduled Team Calendar Google sync job should be active.</description>
    <inlineHelpText>Uncheck to keep the metadata deployed but disable the scheduled job.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>