force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Past_Days__c.field-meta.xml
<CustomField>
    <fullName>Past_Days__c</fullName>
    <description>How many days back the scheduled sync should include.</description>
    <inlineHelpText>Use this to recheck recent updates or cancellations without syncing the full event history.</inlineHelpText>
    <label>Past Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>