force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Run_Exports__c.field-meta.xml
<CustomField>
    <fullName>Run_Exports__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether scheduled runs should push changed Salesforce events to Google.</description>
    <inlineHelpText>Scheduled exports only queue unsynced, changed, or previously errored events inside the configured date window.</inlineHelpText>
    <label>Run Exports</label>
    <type>Checkbox</type>
</CustomField>