force-app/main/default/objects/Google_Sync_Schedule__mdt/fields/Run_Imports__c.field-meta.xml
<CustomField>
    <fullName>Run_Imports__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether scheduled runs should pull Google events back into Salesforce.</description>
    <inlineHelpText>Scheduled imports use the Team Calendar Google import selection list inside the configured date window.</inlineHelpText>
    <label>Run Imports</label>
    <type>Checkbox</type>
</CustomField>